@@ -1,3 +1,4 @@
+7/14/14 Game: move challengesPerGame property from view to model
 7/14/14 remove coupling between EquationChoiceNode and IntroductionModel
 7/14/14 rename IntroductionModel.currentEquation to equation
 7/14/14 remove coupling between BoxesNode and models
